--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,7 @@ name: Java CI with Maven
 on:
   schedule:
     - cron: '0 9 * * *'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
